AB#main: main: Fix the too dark color issue; add decoration to buildings.

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: #09111d;
 }
